# PPP

./: README.md
Exercicios-PPP/: .gitignore  Exes.c
PPP-1-Trabalho/: Menos Am mais PPP.c  Top10Dei.c
PPP-2-Trabalho/: CMakeLists.txt  FuncAux.c  FuncStruct.c  header.h  main.c  palavras.txt
Trabalho-Final/: CMakeLists.txt  FuncStruct.c  FuncTexto.c  header.h  main.c  main2.c
